edited payments header

--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -71,7 +71,9 @@
                 </div>
                 <div class="other-statistic">
                     <div class="profit-statistic">
-                        <h3>Прибыль</h3>
+
+                            <h3>Прибыль</h3>
+
                         <div class="container-fluid">
                             <div class="table-responsive">
                                 <table class="table table-borderless caption-top profit-table">
@@ -149,7 +151,10 @@
                         </div>
                     </div>
                     <div class="payment-statistic">
-                        <h3 class="mb-3">Платежи</h3>
+                        <div class="payment-header">
+                            <h3 class="mb-3">Платежи</h3> <p>выгрузить в Excel</p>
+                        </div>
+
                         <div class="table-responsive">
                             <table class="table table-borderless payment-table">
                                 <tr>
