--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -13,7 +13,24 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <nav class="navbar navbar-light bg-white navbar-computer">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="../../images/logo.svg" alt="logo">
+                    EDUSTURM
+                </a>
+                <div class="navbar">
+                    <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
+                    <ul class="navbar-nav">
+                        <button type="button" name="button" class="profile-button">
+                            <img src="../../images/profile.svg" alt="Profile">
+                        </button>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <nav class="navbar navbar-light bg-white navbar-mobile">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="../../images/logo.svg" alt="logo">
@@ -23,11 +40,12 @@
                     <img src="../../images/toggleIcon.svg" alt="Toggle Icon">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
-                    <ul class="navbar-nav">
-                        <button type="button" name="button" class="profile-button">
-                            <img src="../../images/profile.svg" alt="Profile">
-                        </button>
+                    <ul class="list-group list-group-flush" id="list-mobile">
+                        <li class="list-group-item"><a href="#">Настройки профиля</a></li>
+                        <li class="list-group-item"><a href="#">Мои курсы</a></li>
+                        <li class="list-group-item"><a href="#">Техподдержка</a></li>
+                        <li class="list-group-item border-bottom-0"><a href="#">Статистика</a></li>
+                        <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
                     </ul>
                 </div>
             </div>
