--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -63,7 +63,7 @@
                 <div class="chart">
                     <h3>Ученики</h3>
                     <div class="chart-container">
-                        <canvas id="doughnut-chart" width="200px" height="400"></canvas>
+                        <canvas id="doughnut-chart"></canvas>
                     </div>
                     <div class="grey-text diagram-text mt-5">
                         На диаграмме отображены абсолютные и относительные <br>показатели по уровням подписки среди всех подписчиков
@@ -376,8 +376,8 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <script type="text/javascript" src="../../../src/js/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.1.1/dist/chart.umd.min.js"></script>
+    <script type="text/javascript" src="../../../src/js/donutChart.js"></script>
 
 </body>
 
