--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -53,21 +53,21 @@
         <h1 class="private-messages-header mt-4">Сообщения</h1>
         <div class="private-chat-body">
             <div class="chat-list">
-                <div class="chat-item">
+                <div class="chat-item item-first active">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
-                <div class="chat-item">
+                <div class="chat-item item-second">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
-                <div class="chat-item">
+                <div class="chat-item item-third">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
@@ -76,7 +76,53 @@
                 </div>
 
             </div>
-            <div class="card">
+            <div class="card chat-first">
+                <div class="card-header d-flex flex-row align-items-center gap-3">
+                    <img src="../../images/avatar.png" alt="Avatar">
+                    <h3>Иван Иванов</h3>
+                </div>
+                <div class="card-body d-flex flex-column ">
+                    <div class="sender mb-3 align-items-center w-100">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <div class="sender-message w-100">
+                            Домашка принята, все супер!
+                        </div>
+                    </div>
+                    <div class="chat-user justify-content-end align-items-center w-100 mb-3">
+                        <div class="chat-user-message">
+                            Ееее, спасибо!
+                        </div>
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-footer border-0 pb-5">
+                    <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
+                </div>
+            </div>
+            <div class="card chat-second">
+                <div class="card-header d-flex flex-row align-items-center gap-3">
+                    <img src="../../images/avatar.png" alt="Avatar">
+                    <h3>Иван Иванов</h3>
+                </div>
+                <div class="card-body d-flex flex-column ">
+                    <div class="sender mb-3 align-items-center w-100">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <div class="sender-message w-100">
+                            Домашка принята, все супер!
+                        </div>
+                    </div>
+                    <div class="chat-user justify-content-end align-items-center w-100 mb-3">
+                        <div class="chat-user-message">
+                            Ееее, спасибо!
+                        </div>
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-footer border-0 pb-5">
+                    <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
+                </div>
+            </div>
+            <div class="card chat-third">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -147,8 +193,9 @@
                 </div>
         </footer>
     </div>
-    <script type="text/javascript" src="../../src/js/chat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../../src/js/chat.js"></script>
+    <script type="text/javascript" src="../../src/js/activeChat.js"></script>
 </body>
 
 </html>
