--- a/html/Auth/codeRegistration.html
+++ b/html/Auth/codeRegistration.html
@@ -43,7 +43,7 @@
                         На fkfkfkfj@gmail.com отправлено письмо с одноразовым код-паролем
                     </div>
                     <button type="submit" class="button-signin">Зарегистрироваться</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         При регистрации вы даете свое согласие на обработку персональных данных
                     </div>
                     <div class="mt-3">
