--- a/html/Auth/codeSignIn.html
+++ b/html/Auth/codeSignIn.html
@@ -43,7 +43,7 @@
                         На fkfkfkfj@gmail.com отправлено письмо с одноразовым код-паролем
                     </div>
                     <button type="submit" class="button-signin">Войти</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         <u>Назад</u>
                     </div>
                 </form>
