--- a/html/Auth/registration.html
+++ b/html/Auth/registration.html
@@ -46,7 +46,7 @@
                         <u>Не помню пароль</u>
                     </div>
                     <button type="submit" class="button-signin">Выслать код-пароль</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         При регистрации вы даете свое согласие на обработку персональных данных
                     </div>
                     <div>
