--- a/html/Auth/requestNewPassword.html
+++ b/html/Auth/requestNewPassword.html
@@ -41,7 +41,7 @@
                         <input type="email" placeholder="Электронная почта" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <button type="submit" class="button-signin">Отправить</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         У вас уже есть профиль? <u>Войдите</u>
                     </div>
                 </form>
