--- a/html/Auth/signIn.html
+++ b/html/Auth/signIn.html
@@ -46,7 +46,7 @@
                         <u>Не помню пароль</u>
                     </div>
                     <button type="submit" class="button-signin">Выслать код-пароль</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         Еще нет профиля? <u>Зарегистрируйтесь!</u>
                     </div>
                 </form>
