--- a/html/Student/Courses/userCourses.html
+++ b/html/Student/Courses/userCourses.html
@@ -30,7 +30,7 @@
             </div>
         </nav>
 
-        <h1 class="mb-5 mt-5 recomend-course-header">Доступные курсы</h1>
+        <h1 class="mb-5 mt-5 recommend-course-header">Доступные курсы</h1>
 
         <div class="course-faces">
             <div class="course-face">
