--- a/html/Auth/password.html
+++ b/html/Auth/password.html
@@ -43,7 +43,7 @@
                         <input type="password" placeholder="Повторите пароль" class="form-control" id="exampleInputPassword1">
                     </div>
                     <button type="submit" class="button-signin">Дальше</button>
-                    <div class="no-registaration">
+                    <div class="no-registration">
                         или <u>войдите</u>
                     </div>
                 </form>
