--- a/html/index.html
+++ b/html/index.html
@@ -204,7 +204,7 @@
                     </div>
                 </div>
             </div>
-            <div class="block-buton-courses">
+            <div class="block-button-courses">
                 <button type="button" name="button" class="more-courses">Еще курсы</button>
             </div>
 
