--- a/html/courses.html
+++ b/html/courses.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../src/css/contacts.css">
     <link rel="stylesheet" href="../src/css/footer.css">
     <link rel="stylesheet" href="../src/css/nav.css">
+    <link rel="stylesheet" href="../src/css/gradient.css">
     <title>Курс</title>
 </head>
 
@@ -90,7 +91,7 @@
             <div class="users-course">
                 <div class="user-course">
                     <img src="../images/profileUser.png" class="img-fluid w-5" alt="Profile">
-                    <div class="textuser-course">
+                    <div class="text-user-course">
                         <h5>Новичкам в дизайне</h5>
                         Вы освоите Photoshop, Illustrator, InDesign, Adobe Color. Сможете разрабатывать фирменный стиль и дизайн-концепции для бренда, вести задачи от брифа до презентации. Отточите навыки на реальных проектах — сможете зарабатывать
                         уже во время курса.
@@ -98,7 +99,7 @@
                 </div>
                 <div class="user-course">
                     <img src="../images/profileUser.png" class="img-fluid" alt="Profile">
-                    <div class="textuser-course">
+                    <div class="text-user-course">
                         <h5>Дизайнерам смежных сфер</h5>
                         Вы погрузитесь в специфику графического дизайна: узнаете,
                         как создаются элементы айдентики, разберётесь в брендинге. Расширите список задач, чтобы больше зарабатывать на фрилансе или эффективнее работать в команде.
