--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../src/css/contacts.css">
     <link rel="stylesheet" href="../src/css/footer.css">
     <link rel="stylesheet" href="../src/css/nav.css">
+    <link rel="stylesheet" href="../src/css/gradient.css">
     <title>Главная страница</title>
 </head>
 
