--- a/html/news.html
+++ b/html/news.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../src/css/buttons.css">
     <link rel="stylesheet" href="../src/css/footer.css">
     <link rel="stylesheet" href="../src/css/nav.css">
+    <link rel="stylesheet" href="../src/css/gradient.css">
 </head>
 
 <body>
