--- a/html/news.html
+++ b/html/news.html
@@ -67,8 +67,8 @@
             алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
             Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.
         </div>
-        <div class="img-gradient">
-          <img src="../images/newsFirstImg.png" class="img-fluid"  alt="First Img">
+        <div class="img-gradient w-100">
+          <img src="../images/newsFirstImg.png" class="img-fluid w-100"  alt="First Img">
         </div>
 
         <div class="text-news">
@@ -83,8 +83,8 @@
             алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
             Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.<br><br>
         </div>
-        <div class="img-gradient">
-            <img src="../images/newsSecondImg.png" class="img-fluid" alt="Second Img">
+        <div class="img-gradient w-100">
+            <img src="../images/newsSecondImg.png" class="img-fluid w-100" alt="Second Img">
         </div>
 
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
