removed input id

--- a/html/Auth/codeRegistration.html
+++ b/html/Auth/codeRegistration.html
@@ -37,7 +37,7 @@
                 <form>
                     <legend class="mb-4">Войдите в свой профиль</legend>
                     <div class="mb-3">
-                        <input type="email" placeholder="Код-пароль" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" placeholder="Код-пароль" class="form-control" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-4">
                         На fkfkfkfj@gmail.com отправлено письмо с одноразовым код-паролем
