--- a/html/Auth/password.html
+++ b/html/Auth/password.html
@@ -37,10 +37,10 @@
                 <form>
                     <legend class="mb-4">Придумайте пароль</legend>
                     <div class="mb-3">
-                        <input type="password" placeholder="Пароль" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="password" placeholder="Пароль" class="form-control" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-4">
-                        <input type="password" placeholder="Повторите пароль" class="form-control" id="exampleInputPassword1">
+                        <input type="password" placeholder="Повторите пароль" class="form-control">
                     </div>
                     <button type="submit" class="button-signin">Дальше</button>
                     <div class="no-registration">
