--- a/html/Auth/registration.html
+++ b/html/Auth/registration.html
@@ -37,10 +37,10 @@
                 <form>
                     <legend class="mb-4">Создайте аккаунт</legend>
                     <div class="mb-3">
-                        <input type="email" placeholder="E-mail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" placeholder="E-mail" class="form-control" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-4">
-                        <input type="password" placeholder="Имя" class="form-control" id="exampleInputPassword1">
+                        <input type="password" placeholder="Имя" class="form-control">
                     </div>
                     <div class="mb-4">
                         <u>Не помню пароль</u>
