--- a/html/Auth/requestNewPassword.html
+++ b/html/Auth/requestNewPassword.html
@@ -38,7 +38,7 @@
                     <legend class="mb-4">Восстановление пароля</legend>
                     <div class="mb-5">
                         <label for="exampleInputEmail1" class="mb-3">Укажите, куда отправить инструкции для восстановления пароля.</label>
-                        <input type="email" placeholder="Электронная почта" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" placeholder="Электронная почта" class="form-control" aria-describedby="emailHelp">
                     </div>
                     <button type="submit" class="button-signin">Отправить</button>
                     <div class="no-registration">
