--- a/html/Auth/signIn.html
+++ b/html/Auth/signIn.html
@@ -37,10 +37,10 @@
                 <form>
                     <legend class="mb-4">Войдите в свой профиль</legend>
                     <div class="mb-3">
-                        <input type="email" placeholder="Логин или e-mail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <input type="email" placeholder="Логин или e-mail" class="form-control" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-4">
-                        <input type="password" placeholder="Пароль" class="form-control" id="exampleInputPassword1">
+                        <input type="password" placeholder="Пароль" class="form-control">
                     </div>
                     <div class="mb-4">
                         <u>Не помню пароль</u>
