--- a/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
@@ -76,46 +76,46 @@
                         </div>
                         <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
-                            <input type="email" id="exampleFormControlInput1" class="form-control" placeholder="name@example.com">
+                            <input type="email" class="form-control" placeholder="name@example.com">
                         </div>
                         <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">Имя и фамилия*</label>
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control" >
                         </div>
                         <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">О деятельности</label>
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <div class="mb-5 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">Об авторе</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea"></textarea>
+                            <textarea class="form-control"></textarea>
                         </div>
                         <h2>Социальные сети</h2>
                         <p>Вставьте ссылки на ваши социальные сети</p>
                         <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/instagram.svg" alt="">
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/youtube.svg" alt="">
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/vk.svg" alt="">
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/facebook.svg" alt="">
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <div class="mb-5 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/discord.svg" alt="">
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <input class="form-control">
                         </div>
                         <h2 class="mb-3">Оповещения</h2>
                         <div class="email-warning-text w-75 form-check form-switch">
                             <label class="form-check-label" for="flexSwitchCheckDefault">E-mail оповещение о проверке уроков, обратной связи и т.д.</label>
-                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                            <input class="form-check-input" type="checkbox" role="switch">
                         </div>
                     </form>
                     <div class="settings-text">
