changed inputs in user lesson

--- a/html/Student/Courses/userLesson.html
+++ b/html/Student/Courses/userLesson.html
@@ -106,11 +106,11 @@
             <div class="homework-form">
                 <form>
                     <legend class="headForm">Загрузка ДЗ</legend>
-                    <div class="mb-3">
-                        <input class="form-control" placeholder="Комментарии к работе" id="comment" aria-describedby="emailHelp">
-                    </div>
-                    <div class="linkInput">
+                    <div class="linkInput mb-3">
                         <input placeholder="Ссылка" class="form-control" id="link">
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control" placeholder="Комментарии к работе" id="comment" aria-describedby="emailHelp"></textarea>
                     </div>
                     <button type="button" class="button-signin" name="button">Отправить на проверку</button>
                 </form>
