changed form of feedback

--- a/html/index.html
+++ b/html/index.html
@@ -385,7 +385,7 @@
             <h1>Контакты</h1>
             <div class="contacts-blocks">
                 <div class="text-contacts">
-                    <div class="contacts-big-text">Вам нужна помощь в подборе курса?
+                    <div class="contacts-big-text">Вам нужна помощь в подборе курса? <br>
                         Свяжитесь с нами!</div>
                     звоните:
                     <div class="contacts-big-text">+7 999 954-77-82</div>
@@ -395,7 +395,7 @@
                 <form class="get-contacts">
                     <input type="text" name="name" class="form-control" value="" placeholder="Ваше имя" style="height: 3rem;">
                     <input type="text" name="email" class="form-control" value="" placeholder="Ваш e-mail" style="height: 3rem;">
-                    <input type="text" name="comment" class="form-control" value="" placeholder="ваш комментарий" style="height: 10rem;">
+                    <input type="text" name="comment" class="form-control" value="" placeholder="Ваш комментарий" style="height: 10rem;">
                     <button type="button" name="button" class="green-button">Отправить</button>
                     <div class="conditions">
                         Нажимая кнопку, вы соглашаетесь с условиями политики обработки персональных данных
