changed button in perdonal account teacher corses

--- a/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
+++ b/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
@@ -80,7 +80,7 @@
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
                                     <div>
-                                        <button type="button" name="button" class="green-button">Начать обучение</button>
+                                        <button type="button" name="button" class="green-button">Перейти к курсу</button>
                                     </div>
 
                                 </div>
@@ -99,7 +99,7 @@
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
                                     <div>
-                                        <button type="button" name="button" class="green-button">Начать обучение</button>
+                                        <button type="button" name="button" class="green-button">Перейти к курсу</button>
                                     </div>
 
                                 </div>
@@ -118,7 +118,7 @@
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
                                     <div>
-                                        <button type="button" name="button" class="green-button">Начать обучение</button>
+                                        <button type="button" name="button" class="green-button">Перейти к курсу</button>
                                     </div>
 
                                 </div>
