changed mobile table of profit

--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -106,40 +106,40 @@
                                     48 900₽
                                 </div>
                                 <div class="profit-blocks">
-                                    <div class="profit-block">
-                                        <div class="profit-block-head grey-text mb-3">
+                                    <div class="profit-block mb-4">
+                                        <div class="profit-block-head grey-text mb-2">
                                             Приятель
                                         </div>
                                         <div class="profit-block-money">
                                             21 430₽
                                         </div>
                                     </div>
-                                    <div class="profit-block">
-                                        <div class="profit-block-head grey-text mb-3">
+                                    <div class="profit-block mb-4">
+                                        <div class="profit-block-head grey-text mb-2">
                                             Дружище
                                         </div>
                                         <div class="profit-block-money">
                                             3 500₽
                                         </div>
                                     </div>
-                                    <div class="profit-block">
-                                        <div class="profit-block-head grey-text mb-3">
+                                    <div class="profit-block mb-4">
+                                        <div class="profit-block-head grey-text mb-2">
                                             БРО
                                         </div>
                                         <div class="profit-block-money">
                                             5 000₽
                                         </div>
                                     </div>
-                                    <div class="profit-block">
-                                        <div class="profit-block-head grey-text mb-3">
+                                    <div class="profit-block mb-4">
+                                        <div class="profit-block-head grey-text mb-2">
                                             Цели
                                         </div>
                                         <div class="profit-block-money">
                                             15 730₽
                                         </div>
                                     </div>
-                                    <div class="profit-block">
-                                        <div class="profit-block-head grey-text mb-3">
+                                    <div class="profit-block mb-4">
+                                        <div class="profit-block-head grey-text mb-2">
                                             Покупки
                                         </div>
                                         <div class="profit-block-money">
