--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -53,21 +53,21 @@
         <h1 class="private-messages-header mt-4">Чаты с учениками</h1>
         <div class="private-chat-body">
             <div class="chat-list">
-                <div class="chat-item">
+                <div class="chat-item item-first active">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
-                <div class="chat-item">
+                <div class="chat-item item-second">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
                         <p>Сообщение отправлено</p>
                     </div>
                 </div>
-                <div class="chat-item">
+                <div class="chat-item item-third">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <div class="chat-item-text">
                         <h4>Иван Иванов</h4>
@@ -76,12 +76,58 @@
                 </div>
 
             </div>
-            <div class="card">
+            <div class="card chat-first">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
                 </div>
-                <div class="card-body d-flex flex-column">
+                <div class="card-body d-flex flex-column ">
+                    <div class="sender mb-3 align-items-center w-100">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <div class="sender-message w-100">
+                            Домашка принята, все супер!
+                        </div>
+                    </div>
+                    <div class="chat-user justify-content-end align-items-center w-100 mb-3">
+                        <div class="chat-user-message">
+                            Ееее, спасибо!
+                        </div>
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-footer border-0 pb-5">
+                    <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
+                </div>
+            </div>
+            <div class="card chat-second">
+                <div class="card-header d-flex flex-row align-items-center gap-3">
+                    <img src="../../images/avatar.png" alt="Avatar">
+                    <h3>Иван Иванов</h3>
+                </div>
+                <div class="card-body d-flex flex-column ">
+                    <div class="sender mb-3 align-items-center w-100">
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                        <div class="sender-message w-100">
+                            Домашка принята, все супер!
+                        </div>
+                    </div>
+                    <div class="chat-user justify-content-end align-items-center w-100 mb-3">
+                        <div class="chat-user-message">
+                            Ееее, спасибо!
+                        </div>
+                        <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
+                    </div>
+                </div>
+                <div class="card-footer border-0 pb-5">
+                    <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
+                </div>
+            </div>
+            <div class="card chat-third">
+                <div class="card-header d-flex flex-row align-items-center gap-3">
+                    <img src="../../images/avatar.png" alt="Avatar">
+                    <h3>Иван Иванов</h3>
+                </div>
+                <div class="card-body d-flex flex-column ">
                     <div class="sender mb-3 align-items-center w-100">
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                         <div class="sender-message w-100">
@@ -100,54 +146,55 @@
                 </div>
             </div>
         </div>
-        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
-            <div class="container">
-                <div class="computer-footer">
-                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
-                        <li>EDUSTRUM</li>
-                        <li class="nav-item">
-                            +7 999 954-77-82 <br>
-                            pochta@gmail.com
-                        </li>
-                        <li><button type="button" name="button" class="social-button">vk</button></li>
-                        <li><button type="button" name="button" class="social-button">tg</button></li>
-                        <li><button type="button" name="button" class="social-button">wa</button></li>
-                        <li class="nav-item">
-                            Политика <br> конфиденциальности
-                        </li>
-                    </ul>
+    <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+        <div class="container">
+            <div class="computer-footer">
+                <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                    <li>EDUSTRUM</li>
+                    <li class="nav-item">
+                        +7 999 954-77-82 <br>
+                        pochta@gmail.com
+                    </li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
+                    <li class="nav-item">
+                        Политика <br> конфиденциальности
+                    </li>
+                </ul>
+            </div>
+            <div class="mobile-footer">
+                <div class="mt-3">
+                    EDUSTRUM
                 </div>
-                <div class="mobile-footer">
-                    <div class="mt-3">
-                        EDUSTRUM
+                <div class="row  row-cols-sm-2   mt-3">
+                    <div class="col mb-3">
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
+                        </ul>
                     </div>
-                    <div class="row  row-cols-sm-2   mt-3">
-                        <div class="col mb-3">
-                            <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
-                            </ul>
-                        </div>
 
-                        <div class="col mb-3">
-                            <ul class="nav flex-column">
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
-                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
-                            </ul>
-                        </div>
+                    <div class="col mb-3">
+                        <ul class="nav flex-column">
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
+                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
+                        </ul>
                     </div>
-                    <ul class="nav justify-content-start flex-row mb-3 gap-4">
-                        <li><button type="button" name="button" class="social-button">vk</button></li>
-                        <li><button type="button" name="button" class="social-button">tg</button></li>
-                        <li><button type="button" name="button" class="social-button">wa</button></li>
-                    </ul>
                 </div>
-        </footer>
+                <ul class="nav justify-content-start flex-row mb-3 gap-4">
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
+                </ul>
+            </div>
+    </footer>
     </div>
     <script type="text/javascript" src="../../src/js/chat.js"></script>
+    <script type="text/javascript" src="../../src/js/activeChat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
