--- a/html/Student/Courses/recommendCourses.html
+++ b/html/Student/Courses/recommendCourses.html
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="computer-footer">
                     <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
-                        <li>EDUSTRUM</li>
+                        <li>EDUSTURM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
                             pochta@gmail.com
@@ -102,7 +102,7 @@
                 </div>
                 <div class="mobile-footer">
                     <div class="mt-3">
-                        EDUSTRUM
+                        EDUSTURM
                     </div>
                     <div class="row  row-cols-sm-2   mt-3">
                         <div class="col mb-3">
