--- a/html/index.html
+++ b/html/index.html
@@ -406,8 +406,8 @@
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
                 <div class="computer-footer">
-                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
-                        <li>EDUSTRUM</li>
+                    <ul class="nav justify-content-center align-items-center flex-row justify-content-between mt-3 mb-3">
+                        <li>EDUSTURM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
                             pochta@gmail.com
@@ -422,7 +422,7 @@
                 </div>
                 <div class="mobile-footer">
                     <div class="mt-3">
-                        EDUSTRUM
+                        EDUSTURM
                     </div>
                     <div class="row  row-cols-sm-2   mt-3">
                         <div class="col mb-3">
