added sidebar in news page

--- a/html/news.html
+++ b/html/news.html
@@ -57,35 +57,103 @@
             <h1><b>Компания Google: история создания и путь к успеху</b></h1>
             Время чтения: 3 минуты
         </div>
-        <div class="text-news">
-            Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
-            отец впоследствии занимался преподавательской деятельностью.<br><br>
-            Научная работа молодых аспирантов заключалась в разработке новых принципов поиска информации
-            в интернете. На тот момент уже существовали поисковики, и Google в этом смысле не был новатором. Однако в итоге Пейдж и Брин создали принципиально иной продукт.<br><br>
-            Дело в том, что существовавшие поисковые системы не сортировали результаты запросов по частоте встречаемых слов. И пользователи часто получали не ту информацию, которую искали.<br><br>
-            Учитывая это, разработчики впервые в рамках своего проекта BackRub внедрили такой параметр, как значимость страниц. Итогом работы стал поисковый робот, запущенный в 1996 году на университетском сайте. Он индексировал страницы, используя
-            алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
-            Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.
-        </div>
-        <div class="img-gradient w-100">
-          <img src="../images/newsFirstImg.png" class="img-fluid w-100"  alt="First Img">
+        <div class="news-container">
+            <div class="news-body">
+                <div class="text-news">
+                    Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
+                    отец впоследствии занимался преподавательской деятельностью.<br><br>
+                    Научная работа молодых аспирантов заключалась в разработке новых принципов поиска информации
+                    в интернете. На тот момент уже существовали поисковики, и Google в этом смысле не был новатором. Однако в итоге Пейдж и Брин создали принципиально иной продукт.<br><br>
+                    Дело в том, что существовавшие поисковые системы не сортировали результаты запросов по частоте встречаемых слов. И пользователи часто получали не ту информацию, которую искали.<br><br>
+                    Учитывая это, разработчики впервые в рамках своего проекта BackRub внедрили такой параметр, как значимость страниц. Итогом работы стал поисковый робот, запущенный в 1996 году на университетском сайте. Он индексировал страницы, используя
+                    алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
+                    Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.
+                </div>
+                <div class="img-gradient w-100">
+                  <img src="../images/newsFirstImg.png" class="img-fluid w-100"  alt="First Img">
+                </div>
+
+                <div class="text-news">
+                    <h1><b>Первые успехи</b>
+                    </h1>
+                    Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
+                    отец впоследствии занимался преподавательской деятельностью.<br><br>
+                    Научная работа молодых аспирантов заключалась в разработке новых принципов поиска информации
+                    в интернете. На тот момент уже существовали поисковики, и Google в этом смысле не был новатором. Однако в итоге Пейдж и Брин создали принципиально иной продукт.<br><br>
+                    Дело в том, что существовавшие поисковые системы не сортировали результаты запросов по частоте встречаемых слов. И пользователи часто получали не ту информацию, которую искали.<br><br>
+                    Учитывая это, разработчики впервые в рамках своего проекта BackRub внедрили такой параметр, как значимость страниц. Итогом работы стал поисковый робот, запущенный в 1996 году на университетском сайте. Он индексировал страницы, используя
+                    алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
+                    Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.<br><br>
+                </div>
+                <div class="img-gradient w-100">
+                    <img src="../images/newsSecondImg.png" class="img-fluid w-100" alt="Second Img">
+                </div>
+            </div>
+            <div class="news-nav">
+                <ul class="list-group list-group-flush list-group-reccomend-news">
+                    <li class="list-group-item reccomend-news"><a href="#"><h5>Рекомендованные новости</h5></a></li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Новость</h5>
+                            <p>Очень интресное описание новости</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid"  alt="Картинка новости">
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Новость</h5>
+                            <p>Очень интресное описание новости</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid" alt="Картинка новости">
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Новость</h5>
+                            <p>Очень интресное описание новости</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid" alt="Картинка новости">
+                        </div>
+                    </li>
+                </ul>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item reccomend-news"><a href="#"><h5>Рекомендованные курсы</h5></a></li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Курс</h5>
+                            <p>Очень интресное описание курса</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid"  alt="Картинка новости">
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Курс</h5>
+                            <p>Очень интресное описание курса</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid" alt="Картинка новости">
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="nav-text w-50">
+                            <h5>Курс</h5>
+                            <p>Очень интресное описание курса</p>
+                        </div>
+                        <div class="nav-pic w-50">
+                            <img src="../images/youngWoman.png" class="img-fluid" alt="Картинка новости">
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
         </div>
 
-        <div class="text-news">
-            <h1><b>Первые успехи</b>
-            </h1>
-            Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
-            отец впоследствии занимался преподавательской деятельностью.<br><br>
-            Научная работа молодых аспирантов заключалась в разработке новых принципов поиска информации
-            в интернете. На тот момент уже существовали поисковики, и Google в этом смысле не был новатором. Однако в итоге Пейдж и Брин создали принципиально иной продукт.<br><br>
-            Дело в том, что существовавшие поисковые системы не сортировали результаты запросов по частоте встречаемых слов. И пользователи часто получали не ту информацию, которую искали.<br><br>
-            Учитывая это, разработчики впервые в рамках своего проекта BackRub внедрили такой параметр, как значимость страниц. Итогом работы стал поисковый робот, запущенный в 1996 году на университетском сайте. Он индексировал страницы, используя
-            алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
-            Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.<br><br>
-        </div>
-        <div class="img-gradient w-100">
-            <img src="../images/newsSecondImg.png" class="img-fluid w-100" alt="Second Img">
-        </div>
 
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
             <div class="container">
@@ -132,6 +200,7 @@
                         <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
+            </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
