--- a/html/Student/Courses/userLesson.html
+++ b/html/Student/Courses/userLesson.html
@@ -117,10 +117,17 @@
                 <div class="files">
                     <div class="head-files">
                         <h2>Файлы</h2>
-                        <button type="button" class="add" name="button">Добавить</button>
+
                     </div>
-                    <div class="text-files">
-                        После отправки работа появится здесь
+                    <div class="drag-container">
+                        <div class="drag-text">
+                            <label for="fileElem" class="choose-file">
+                                Выберите файл
+                            </label> или перетащите его сюда
+                            <input type="file" class="input-files" id="fileElem">
+                        </div>
+                        <div class="result">
+                        </div>
                     </div>
                     <button type="button" class="button-signin" name="button">Отправить на проверку</button>
                 </div>
@@ -176,6 +183,7 @@
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../../../src/js/dragFiles.js"></script>
 </body>
 
 </html>
